2007-06-18  Kouhei Sutou  <kou@cozmixng.org>

	* src/gnomevfs-file.c:
	- used RSTRING_PTR() and RSTRING_LEN() to support ruby 1.9.
	- removed debug print.

2006-06-23  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/gnomevfs-mime-application.c: Fixed wrong definition of 
	GnomeVFS::Mime::ArgumentType.

2006-06-13  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/gnomevfs-file.c: Use rb_rs.

	* src/gnomevfs-directory.c: Define GnomeVFS::Dir as an alias of GnomeVFS::Directory.

	* src/gnomevfs-directory.c (directory_list_load): Use g_list_free() instead of
	gnome_vfs_file_info_list_free() since gnome_vfs_file_info_list_free() frees
	each element of the list and causes segmentation fault in this case.

	* src/gnomevfs-directory.c, src/gnomevfs-file.c, src/gnomevfs-fileinfo.c,
	src/gnomevfs-mime-application.c, src/gnomevfs-mime.c, src/gnomevfs-monitor.c,
	src/gnomevfs-uri.c, src/gnomevfs.c: Apply enum/flags changes. Replace unsafe
	uses of FIX2INT and FIX2UINT with NUM2INT and NUM2UINT.

	* src/gnomevfs-directory.c (directory_list_load): Fix segmentation fault which
	caused by a wrong usage of GLIST2ARY(list). 

2006-06-12  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/gnomevfs-file.c (GnomeVFS::File): Use rb_io_printf, rb_io_puts, rb_io_print
	and rb_io_addstr to implement corresponding methods.

2006-06-11  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/gnomevfs-file.c (GnomeVFS::File): Allow optional "buffer" argument like
	IO#raed. And fix to read to the end of file when length is ommited, even if
	gnome_vfs_get_file_info_from_handle() and/or gnome_vfs_tell() don't work.

2005-10-15  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb: Cygwin support. [bug #1315334]
	By Yaakov Selkowitz.

2005-10-09  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb, src/gnomevfs.c, src/gnomevfs.h:
	Added GnomeVFS::BUILD_VERSION.

2005-09-18  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/gnomevfs-file.c: If Gnome::VFS.open with write mode can't find